media/css/main.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}
body {
  line-height: 1;
}
ol, ul {
  list-style: none;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

body {
  background-color: #fff;
  font-family: Heebo, sans-serif;
}

#wrapper {
  padding: 20px;
}

header {
  padding: 0 20px;
  background-color: #111;
}

header a {
  text-decoration: none;
  padding: 8px;
  font-size: 0.85rem;
  display: inline-block;
  color: #f1f1f1;
}

header a:hover {
  background-color: #fff;
  color: #111;
}

h1, header, #pagination a, .minutes h3 {
  font-family: 'Montserrat Subrayada', sans-serif;
}

h1 {
  margin: 20px 0;
  font-size: 1.7rem;
}

p, h2 {
  margin: 10px 0;
}

h2 {
  font-size: 1.35rem;
}

#strains {
  display: flex;
  flex-wrap: wrap;
}

#strains li {
  margin: 3px;
  background-color: #f5f5f5;
  min-width: 280px;
  width: 30%;
  float: left;
  overflow: hidden;
}

#strains li a {
  text-decoration: none;
  display: block;
  padding: 5px 10px;
  color: #111;
}

#strains li a h2 {
  font-size: 1rem;
}

#strain-detail img {
  height: 200px;
}

#strains li a:hover {
  background-color: #48efce;
  color: #1659b3;
}

label {
  display: block;
  margin: 20px 0 5px;
}

.minutes {
  padding: 10px 20px 5px 20px;
  margin: 1px;
  background-color: #f1f1f1;
}

.review {
  border: 2px solid #111;
  margin: 10px 0;
}

.review .comments, .review > a > h3, .review > h3 {
  padding: 20px;
}

.review .comments {
  white-space: pre-wrap;
  line-height: 1.2rem;
}

.review h3 {
  font-size: 1.2rem;
}

.review > a {
  text-decoration: none;
  outline: none;
}

.review > a > * {
  color: #111;
}

input[type="text"], textarea {
  font-family: Heebo, sans-serif;
  padding: 2px;
  font-size: 1.1rem;
  border: 1px solid #111;
  width: 70%;
}

textarea {
  max-height: 300px;
  min-height: 80px;
  resize: vertical;
}

button {
  display: block;
  margin: 10px 0 30px;
}

#pagination {
  margin: 20px 0;
}

#pagination a {
  display: inline-block;
  font-size: 1rem;
  margin-right: 20px;
  padding: 10px;
  background-color: #111;
  color: #fff;
  text-decoration: none;
}

#pagination a:hover {
  color: #111;
  background-color: transparent;
}

